[package]
name = "graphix"
version = "0.4.5"
edition = "2021"
authors = ["PlotoZypresse"]
description = "A Rust library for representing undirected graphs using a compressed adjacency list"
repository = "https://github.com/PlotoZypresse/graphix"
homepage = "https://github.com/PlotoZypresse/graphix"
license = "MIT"
keywords = ["graph", "undirected", "adjacency-list", "data-structures", "rust"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
